// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cars должен вернуть колонки для CARS/NEW группа 1`] = `
Array [
  Array [
    "бензин, дизель",
    "2.0, 3.0 л / 150-374 л.с.",
    "7 комплектаций",
  ],
  Array [
    "полный, задний",
    "автомат",
    "седан",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/NEW группа электрокаров 1`] = `
Array [
  Array [
    "электро",
    "184 л.с.",
    "7 комплектаций",
  ],
  Array [
    "полный",
    "Заряд на 320 км",
    "седан",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/NEW объявление 1`] = `
Array [
  Array [
    "complectation name",
    "1.6 л / 122 л.с. / Бензин",
    "роботизированная",
  ],
  Array [
    "42 опции",
    "передний",
    "внедорожник 5 дв.",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/NEW объявление в листинге группы 1`] = `
Array [
  Array [
    "В наличии, 2017",
    "1.6 л / 122 л.с. / Бензин",
    "2 базовые опции",
  ],
  Array [
    "робот",
    "передний",
    "42 доп. опции",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/NEW объявление электрокара 1`] = `
Array [
  Array [
    "complectation name",
    "109 л.с. / 80 кВт / Электро",
    "Заряд на 199 км",
  ],
  Array [
    "58 опций",
    "передний",
    "хэтчбек 5 дв.",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/NEW объявление электрокара без запаса хода 1`] = `
Array [
  Array [
    "complectation name",
    "109 л.с. / 80 кВт / Электро",
    "автоматическая",
  ],
  Array [
    "58 опций",
    "передний",
    "хэтчбек 5 дв.",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/NEW объявление электрокара без запаса хода в листинге группы 1`] = `
Array [
  Array [
    "2017",
    "109 л.с. / 80 кВт / Электро",
    "2 базовые опции",
  ],
  Array [
    "автомат",
    "передний",
    "58 доп. опций",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/NEW объявление электрокара в листинге группы 1`] = `
Array [
  Array [
    "2017",
    "109 л.с. / 80 кВт / Электро",
    "2 базовые опции",
  ],
  Array [
    "Заряд на 199 км",
    "передний",
    "58 доп. опций",
  ],
]
`;

exports[`cars должен вернуть колонки для CARS/USED 1`] = `
Array [
  Array [
    "18 500 км",
    "1.6 л / 122 л.с. / Бензин",
    "роботизированная",
  ],
  Array [
    "белый",
    "передний",
    "внедорожник 5 дв.",
  ],
]
`;

exports[`moto должен вернуть колонки для ATV/new 1`] = `
Array [
  Array [
    "400 см³ / 27 л.с. / Карбюратор",
    "Вариатор",
  ],
  Array [
    "Спортивный",
    "1 цилиндр / рядное",
  ],
]
`;

exports[`moto должен вернуть колонки для ATV/used 1`] = `
Array [
  Array [
    "2 500 км",
    "400 см³ / 27 л.с. / Карбюратор",
    "Вариатор",
  ],
  Array [
    "Спортивный",
    "1 цилиндр / рядное",
  ],
]
`;

exports[`moto должен вернуть колонки для MOTORCYCLE/new 1`] = `
Array [
  Array [
    "1 690 см³ / 87 л.с. / Инжектор",
    "5 передач",
  ],
  Array [
    "Круизер",
    "4 цилиндра / v-образное",
  ],
]
`;

exports[`moto должен вернуть колонки для MOTORCYCLE/used 1`] = `
Array [
  Array [
    "19 439 км",
    "1 690 см³ / 87 л.с. / Инжектор",
    "5 передач",
  ],
  Array [
    "Круизер",
    "4 цилиндра / v-образное",
  ],
]
`;

exports[`moto должен вернуть колонки для SCOOTERS/new 1`] = `
Array [
  Array [
    "400 см³ / 32 л.с. / Карбюратор",
    "Вариатор",
  ],
  Array [
    "зелёный",
    "4 такта",
  ],
]
`;

exports[`moto должен вернуть колонки для SCOOTERS/used 1`] = `
Array [
  Array [
    "31 600 км",
    "400 см³ / 32 л.с. / Карбюратор",
    "Вариатор",
  ],
  Array [
    "зелёный",
    "4 такта",
  ],
]
`;

exports[`moto должен вернуть колонки для SNOWMOBILE/new 1`] = `
Array [
  Array [
    "1 049 см³ / 129 л.с. / Инжектор",
  ],
  Array [
    "Спортивный кроссовый",
    "3 цилиндра / рядное",
  ],
]
`;

exports[`moto должен вернуть колонки для SNOWMOBILE/used 1`] = `
Array [
  Array [
    "1 954 км",
    "1 049 см³ / 129 л.с. / Инжектор",
  ],
  Array [
    "Спортивный кроссовый",
    "3 цилиндра / рядное",
  ],
]
`;

exports[`trucks должен вернуть колонки для AGRICULTURAL/new 1`] = `
Array [
  Array [
    "8.8 л / 170 л.с.",
  ],
  Array [
    "харвестер",
  ],
]
`;

exports[`trucks должен вернуть колонки для AGRICULTURAL/used 1`] = `
Array [
  Array [
    "7 500 моточасов",
    "8.8 л / 170 л.с.",
  ],
  Array [
    "харвестер",
  ],
]
`;

exports[`trucks должен вернуть колонки для ARTIC/new 1`] = `
Array [
  Array [
    "12.7 л / 400 л.с. / Дизель",
    "механика",
  ],
  Array [
    "4x2",
    "2-х местная с 1 спальным",
    "красный",
  ],
]
`;

exports[`trucks должен вернуть колонки для ARTIC/used 1`] = `
Array [
  Array [
    "1 446 512 км",
    "12.7 л / 400 л.с. / Дизель",
    "механика",
  ],
  Array [
    "4x2",
    "2-х местная с 1 спальным",
    "красный",
  ],
]
`;

exports[`trucks должен вернуть колонки для AUTOLOADER/new 1`] = `
Array [
  Array [],
  Array [
    "мини-погрузчик",
  ],
]
`;

exports[`trucks должен вернуть колонки для AUTOLOADER/used 1`] = `
Array [
  Array [
    "3 600 моточасов",
  ],
  Array [
    "мини-погрузчик",
  ],
]
`;

exports[`trucks должен вернуть колонки для BULLDOZERS/new 1`] = `
Array [
  Array [
    "15.2 л / 322 л.с.",
  ],
  Array [
    "гусеничный бульдозер",
  ],
]
`;

exports[`trucks должен вернуть колонки для BULLDOZERS/used 1`] = `
Array [
  Array [
    "11 785 моточасов",
    "15.2 л / 322 л.с.",
  ],
  Array [
    "гусеничный бульдозер",
  ],
]
`;

exports[`trucks должен вернуть колонки для BUS/new 1`] = `
Array [
  Array [
    "11.0 л / 395 л.с. / Дизель",
    "механика",
  ],
  Array [
    "4x2",
    "Туристический",
    "синий",
  ],
]
`;

exports[`trucks должен вернуть колонки для BUS/used 1`] = `
Array [
  Array [
    "200 000 км",
    "11.0 л / 395 л.с. / Дизель",
    "механика",
  ],
  Array [
    "4x2",
    "Туристический",
    "синий",
  ],
]
`;

exports[`trucks должен вернуть колонки для CONSTRUCTION/new 1`] = `
Array [
  Array [],
  Array [
    "каток",
  ],
]
`;

exports[`trucks должен вернуть колонки для CONSTRUCTION/used 1`] = `
Array [
  Array [
    "4 150 моточасов",
  ],
  Array [
    "каток",
  ],
]
`;

exports[`trucks должен вернуть колонки для CRANE/new 1`] = `
Array [
  Array [
    "11.2 л",
  ],
  Array [
    "белый",
    "г/п 25.0 т",
  ],
]
`;

exports[`trucks должен вернуть колонки для CRANE/used 1`] = `
Array [
  Array [
    "12 000 моточасов",
    "11.2 л",
  ],
  Array [
    "белый",
    "г/п 25.0 т",
  ],
]
`;

exports[`trucks должен вернуть колонки для DREDGE/new 1`] = `
Array [
  Array [
    "3.9 л / 97 л.с.",
  ],
  Array [
    "экскаватор-погрузчик",
  ],
]
`;

exports[`trucks должен вернуть колонки для DREDGE/used 1`] = `
Array [
  Array [
    "2 360 моточасов",
    "3.9 л / 97 л.с.",
  ],
  Array [
    "экскаватор-погрузчик",
  ],
]
`;

exports[`trucks должен вернуть колонки для LCV/new 1`] = `
Array [
  Array [
    "2.5 л / 98 л.с. / Бензин",
    "механика",
  ],
  Array [
    "задний",
    "цельнометаллический фургон",
    "г/п 0.95 т",
  ],
]
`;

exports[`trucks должен вернуть колонки для LCV/used 1`] = `
Array [
  Array [
    "250 000 км",
    "2.5 л / 98 л.с. / Бензин",
    "механика",
  ],
  Array [
    "задний",
    "цельнометаллический фургон",
    "г/п 0.95 т",
  ],
]
`;

exports[`trucks должен вернуть колонки для MUNICIPAL/new 1`] = `
Array [
  Array [
    "400 л.с.",
  ],
  Array [
    "контейнеровоз-бункеровоз",
  ],
]
`;

exports[`trucks должен вернуть колонки для MUNICIPAL/used 1`] = `
Array [
  Array [
    "пробег не указан",
    "400 л.с.",
  ],
  Array [
    "контейнеровоз-бункеровоз",
  ],
]
`;

exports[`trucks должен вернуть колонки для TRAILER/new 1`] = `
Array [
  Array [
    "Барабанные",
    "3 оси",
  ],
  Array [
    "Полуприцеп-цистерна",
    "Пневмо-рессорная",
    "г/п 24.9 т",
  ],
]
`;

exports[`trucks должен вернуть колонки для TRAILER/used 1`] = `
Array [
  Array [
    "489 000 км",
    "Барабанные",
    "3 оси",
  ],
  Array [
    "Полуприцеп-цистерна",
    "Пневмо-рессорная",
    "г/п 24.9 т",
  ],
]
`;

exports[`trucks должен вернуть колонки для TRUCK/new 1`] = `
Array [
  Array [
    "11.7 л / 300 л.с. / Дизель",
    "механика",
  ],
  Array [
    "6x6",
    "бортовой с кму",
    "г/п 10.0 т",
  ],
]
`;

exports[`trucks должен вернуть колонки для TRUCK/used 1`] = `
Array [
  Array [
    "пробег не указан",
    "11.7 л / 300 л.с. / Дизель",
    "механика",
  ],
  Array [
    "6x6",
    "бортовой с кму",
    "г/п 10.0 т",
  ],
]
`;
